--- a/index.html
+++ b/index.html
@@ -36,5 +36,8 @@
 <body>
     <h1>Propiedades de Enlaces</h1>
     <a href="hhtp://iesjuanbosco.es">Contacto</a>
+    <a href="bordes.html">el otro ejercicio
+        
+    </a>
 </body>
 </html>
